# libostd

./: .gitignore  COPYING.md  Makefile  README.md  build.cc  build.sh  gen_unicode.cc  meson.build  meson_options.txt  run_tests.py  test_runner.cc
doc/: Doxyfile  main_page.md  ranges.md
examples/: argparse.cc  concurrency.cc  coroutine1.cc  coroutine2.cc  format.cc  glob.cc  listdir.cc  meson.build  range.cc  range_pipe.cc  signal.cc  stream1.cc  stream2.cc
octa/: algorithm.h  algorithm.hh  array.h  array.hh  atomic.h  atomic.hh  format.hh  functional.h  functional.hh  initializer_list.h  initializer_list.hh  io.hh  map.h  map.hh  maybe.hh  memory.h  memory.hh  new.h  new.hh  platform.h  platform.hh  range.h  range.hh  set.h  set.hh  stream.h  stream.hh  string.h  string.hh  traits.h  tuple.hh  type_traits.h  type_traits.hh  types.h  types.hh  utility.h  utility.hh  vector.h  vector.hh
octa/internal/: hashtable.h  hashtable.hh  tuple.hh
octastd/: new.h  vector.h
ostd/: #limits.hh#  algorithm.hh  argparse.hh  array.hh  atomic.hh  channel.hh  concurrency.hh  condition.hh  context_stack.hh  coroutine.hh  environ.hh  event.hh  filesystem.hh  format.hh  functional.hh  generic_condvar.hh  initializer_list.hh  io.hh  keyset.hh  limits.hh  map.hh  maybe.hh  memory.hh  mutex.hh  new.hh  path.hh  platform.hh  process.hh  range.hh  set.hh  signal.hh  stream.hh  string.hh  thread.hh  thread_pool.hh  tuple.hh  type_traits.hh  types.hh  unit_test.hh  unordered_map.hh  (+3 more)
ostd/ext/: sdl_rwops.hh
ostd/internal/: context.hh  hashtable.hh  mutex.hh  tuple.hh  win32.hh
src/: argparse.cc  build_make.cc  channel.cc  concurrency.cc  context_stack.cc  environ.cc  filesystem.cc  io.cc  meson.build  new.cc  new.cpp  path.cc  process.cc  string.cc  thread_pool.cc
src/asm/: README.md  jump_all_gas.S  make_all_gas.S  ontop_all_gas.S
src/asm/arm/: jump_arm_aapcs_elf_gas.S  make_arm_aapcs_elf_gas.S  make_arm_aapcs_macho_gas.S  ontop_arm_aapcs_elf_gas.S
src/asm/arm64/: jump_arm64_aapcs_elf_gas.S  make_arm64_aapcs_elf_gas.S  ontop_arm64_aapcs_elf_gas.S
src/asm/i386/: jump_i386_ms_pe_gas.asm  jump_i386_ms_pe_masm.asm  jump_i386_sysv_elf_gas.S  jump_i386_sysv_macho_gas.S  make_i386_sysv_elf_gas.S  make_i386_sysv_macho_gas.S  ontop_i386_ms_pe_gas.asm  ontop_i386_ms_pe_masm.asm  ontop_i386_sysv_elf_gas.S  ontop_i386_sysv_macho_gas.S
src/asm/mips32/: jump_mips32_o32_elf_gas.S  ontop_mips32_o32_elf_gas.S
src/asm/mips64/: jump_mips64_n64_elf_gas.S  make_mips64_n64_elf_gas.S  ontop_mips64_n64_elf_gas.S
src/asm/ppc32/: jump_ppc32_sysv_elf_gas.S  make_ppc32_sysv_elf_gas.S  ontop_ppc32_sysv_elf_gas.S
src/asm/ppc64/: jump_ppc64_sysv_elf_gas.S  jump_ppc64_sysv_macho_gas.S  jump_ppc64_sysv_xcoff_gas.S  make_ppc64_sysv_elf_gas.S  make_ppc64_sysv_xcoff_gas.S  ontop_ppc64_sysv_elf_gas.S  ontop_ppc64_sysv_macho_gas.S  ontop_ppc64_sysv_xcoff_gas.S
src/asm/riscv64/: jump_riscv64_sysv_elf_gas.S  make_riscv64_sysv_elf_gas.S  ontop_riscv64_sysv_elf_gas.S
src/asm/x86_64/: jump_x86_64_ms_pe_gas.asm  jump_x86_64_ms_pe_masm.asm  jump_x86_64_sysv_elf_gas.S  jump_x86_64_sysv_macho_gas.S  make_x86_64_ms_pe_gas.asm  make_x86_64_sysv_elf_gas.S  ontop_x86_64_ms_pe_gas.asm  ontop_x86_64_ms_pe_masm.asm  ontop_x86_64_sysv_elf_gas.S  ontop_x86_64_sysv_macho_gas.S
src/posix/: context_stack.cc  path.cc  process.cc
src/win32/: context_stack.cc  path.cc  process.cc
tests/: array.cc  array.cpp  gen_test.cc  meson.build  range.cc  test_runner.cc  utility.cc  vector.cc  vector.cpp
